[package]
name = "d-td"
version = "0.1.0"
edition = "2021"
authors = ["Owen Dechow <owen.dechow@gmail.com>"]
license = "MIT"
description = "Exuastive todo list for your cli"
readme = "README"
homepage = "https://github.com/Owen-Dechow/d-td"
repository = "https://github.com/Owen-Dechow/d-td"
keywords = ["cli", "todo", "rust"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dtt = "0.0.5"
